--- a/src/componets/UI/Footer.module.css
+++ b/src/componets/UI/Footer.module.css
@@ -2,11 +2,12 @@
     background-color: #f5f5f5;
     color: #666;
     font-size: 14px;
-    padding: 20px;
     text-align: center;
     position: relative;
     bottom: 0;
     width: 100%;
+    padding-top: 20px;
+    padding-bottom: 20px;
   }
   
   @media only screen and (max-width: 600px) {
