--- a/src/componets/UI/SlideShow.module.css
+++ b/src/componets/UI/SlideShow.module.css
@@ -17,6 +17,8 @@
     align-items: center;
     justify-content: center;
     position: relative;
+    padding-top: 20px;
+    padding-bottom: 20px;
   }
   
 
