--- a/src/componets/Pages/Product.module.css
+++ b/src/componets/Pages/Product.module.css
@@ -41,9 +41,15 @@
   .grid{
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
   }
 
   .search{
     display: flex;
     justify-content: center;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
   }
