--- a/src/componets/UI/Footer.module.css
+++ b/src/componets/UI/Footer.module.css
@@ -1,5 +1,5 @@
 .footer {
-    background-color: #f5f5f5;
+    background-color: white;
     color: #666;
     font-size: 14px;
     text-align: center;
