--- a/src/componets/UI/Button.module.css
+++ b/src/componets/UI/Button.module.css
@@ -9,8 +9,8 @@
 
 .button:hover,
 .button:active {
-  background: #741188;
-  border-color: #741188;
+  background: #8ab4a3;
+  border-color: #8ab4a3;
 }
 
 .button:focus {
